Fixed header on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,6 +23,9 @@
 
 @media screen and (max-width: 380px) {
 	.header {
+		position: fixed;
+		z-index: 1000;
+		width: 100vw;
 		padding: 11px 15px;
 
 		&__container {
